--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "hardhat-abi-exporter": "^2.8.0",
     "hardhat-diamond-abi": "^2.0.0",
     "hardhat-gas-reporter": "^1.0.8",
+    "hardhat-multichain": "git+https://github.com/GeniusVentures/hardhat-multchain.git#2bba26",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
@@ -64,7 +65,6 @@
     "@axelar-network/axelarjs-sdk": "^0.15.0",
     "@axelar-network/interchain-token-service": "^1.2.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
-    "hardhat-multichain": "git+https://github.com/GeniusVentures/hardhat-multchain.git",
     "ts-node": "^10.9.1"
   }
 }
