WIP GNUS-ai integration deployment and tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,13 +28,14 @@
             "name": "Multichain Plugin Test",
             "type": "node",
             "request": "launch",
-            // "preLaunchTask": "tsc: build - tsconfig.json",
+            "preLaunchTask": "tsc: build - tsconfig.json",
             "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
             "args": [ 
                 "test-multichain", 
-                "${workspaceFolder}/test/deployment/MultiChainForkDeploy.test.ts",
-                "${workspaceFolder}/test/unit/ERC20Proxy.test.ts",
-                "--chains", "hardhat", "--logs", "logs",
+                // "${workspaceFolder}/test/deployment/MultiChainForkDeploy.test.ts",
+                // "${workspaceFolder}/test/unit/ERC20ProxyFacet.test.ts",
+                "${workspaceFolder}/test/integration/GNUSAiIntegration.test.ts",
+                // "--chains", "hardhat", "--logs", "logs",
                 // "--chains", "sepolia", "--logs", "logs",
                 // "--chains", "polygon_amoy", "--logs", "logs",
                 // "--chains", "mainnet", "--logs", "logs", 
@@ -43,7 +44,7 @@
                 // "--chains", "base", "--logs", "logs",
                 // "--chains", "bsc_testnet", "--logs", "logs",
                 // "--chains", "base_sepolia", "--logs", "logs",
-                // "--chains", "hardhat,sepolia", "--logs", "logs",
+                "--chains", "hardhat,sepolia", "--logs", "logs",
                 // "--chains", "sepolia,polygon_amoy", "--logs", "logs",
                 // "--chains", "hardhat,sepolia,polygon_amoy", "--logs", "logs", 
             ],
