--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,19 +5,26 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Basic Tests",
+            "name": "Unit Tests",
             "type": "node",
             "request": "launch",
-            // "preLaunchTask": "tsc: build - tsconfig.json",
+            "preLaunchTask": "tsc: build - tsconfig.json",
             "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
             "args": [
                 "test",
+                "${workspaceFolder}/test/unit/ERC20ProxyFacet.test.ts"
             ],
+            "runtimeArgs": [ "--preserve-symlinks" ],
             "outFiles": ["${workspaceFolder}/dist/**/*.js"],
             "skipFiles": ["<node_internals>/**", "${workspaceFolder}/node_modules/**/*.js"],
             "resolveSourceMapLocations": [
                 "${workspaceFolder}/dist/**/*.js", 
-                "${workspaceFolder}/**/*.ts",
+                "${workspaceFolder}/src/**/*.ts",
+                "${workspaceFolder}/scripts/**/*.ts",
+                "${workspaceFolder}/test/**/*.ts",
+                // "${workspaceFolder}/nod_modules/hardhat-multichain/dist/**/*.js",
+                // "${workspaceFolder}/node_modules/hardhat-multichain/**/*.ts",
+                "${workspaceFolder}/hardhat.config.ts",
             ],
             "sourceMaps": true,
             "smartStep": true,
@@ -25,17 +32,15 @@
             "console": "integratedTerminal",
         },
         {
-            "name": "Multichain Plugin Test",
+            "name": "Deployment Tests",
             "type": "node",
             "request": "launch",
             "preLaunchTask": "tsc: build - tsconfig.json",
             "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
             "args": [ 
                 "test-multichain", 
-                // "${workspaceFolder}/test/deployment/MultiChainForkDeploy.test.ts",
-                // "${workspaceFolder}/test/unit/ERC20ProxyFacet.test.ts",
-                "${workspaceFolder}/test/integration/GNUSAiIntegration.test.ts",
-                // "--chains", "hardhat", "--logs", "logs",
+                "${workspaceFolder}/test/deployment/MultiChainForkDeploy.test.ts",
+                "--chains", "hardhat", "--logs", "logs",
                 // "--chains", "sepolia", "--logs", "logs",
                 // "--chains", "polygon_amoy", "--logs", "logs",
                 // "--chains", "mainnet", "--logs", "logs", 
@@ -44,7 +49,7 @@
                 // "--chains", "base", "--logs", "logs",
                 // "--chains", "bsc_testnet", "--logs", "logs",
                 // "--chains", "base_sepolia", "--logs", "logs",
-                "--chains", "hardhat,sepolia", "--logs", "logs",
+                // "--chains", "hardhat,sepolia", "--logs", "logs",
                 // "--chains", "sepolia,polygon_amoy", "--logs", "logs",
                 // "--chains", "hardhat,sepolia,polygon_amoy", "--logs", "logs", 
             ],
@@ -52,13 +57,84 @@
             "outFiles": ["${workspaceFolder}/dist/**/*.js"],
             "skipFiles": [
                 "<node_internals>/**", 
-                "${workspaceFolder}/node_modules/**/*.js", 
+                // "${workspaceFolder}/node_modules/**/*.js", 
             ],
             "resolveSourceMapLocations": [
                 "${workspaceFolder}/dist/**/*.js", 
-                "${workspaceFolder}/**/*.ts",
-                "${workspaceFolder}/node_modules/hardhat/**/*.js",
-                "${workspaceFolder}/node_modules/hardhat/**/*.ts",
+                "${workspaceFolder}/src/**/*.ts",
+                "${workspaceFolder}/scripts/**/*.ts",
+                "${workspaceFolder}/test/**/*.ts",
+                // "${workspaceFolder}/nod_modules/hardhat-multichain/dist/**/*.js",
+                // "${workspaceFolder}/node_modules/hardhat-multichain/**/*.ts",
+                "${workspaceFolder}/hardhat.config.ts",
+            ],
+            "sourceMaps": true,
+            "smartStep": true,
+            "console": "integratedTerminal",
+        },
+        {
+            "name": "Integration Tests",
+            "type": "node",
+            "request": "launch",
+            "preLaunchTask": "tsc: build - tsconfig.json",
+            "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
+            "args": [ 
+                "test-multichain", 
+                "${workspaceFolder}/test/integration/GNUSAiIntegration.test.ts",
+                // "${workspaceFolder}/test/integration/gnus-ai/test/deployment/MultiChainForkDeploy.test.ts",
+                "--chains", "hardhat", "--logs", "logs",
+                // "--chains", "sepolia", "--logs", "logs",
+                // "--chains", "polygon_amoy", "--logs", "logs",
+                // "--chains", "mainnet", "--logs", "logs", 
+                // "--chains", "polygon", "--logs", "logs",
+                // "--chains", "bsc", "--logs", "logs",
+                // "--chains", "base", "--logs", "logs",
+                // "--chains", "bsc_testnet", "--logs", "logs",
+                // "--chains", "base_sepolia", "--logs", "logs",
+                // "--chains", "hardhat,sepolia", "--logs", "logs",
+                // "--chains", "sepolia,polygon_amoy", "--logs", "logs",
+                // "--chains", "hardhat,sepolia,polygon_amoy", "--logs", "logs", 
+            ],
+            "runtimeArgs": [ "--preserve-symlinks" ],
+            "outFiles": ["${workspaceFolder}/dist/**/*.js"],
+            "skipFiles": [
+                "<node_internals>/**", 
+                // "${workspaceFolder}/node_modules/**/*.js", 
+            ],
+            "resolveSourceMapLocations": [
+                "${workspaceFolder}/dist/**/*.js", 
+                "${workspaceFolder}/src/**/*.ts",
+                "${workspaceFolder}/scripts/**/*.ts",
+                "${workspaceFolder}/test/**/*.ts",
+                // "${workspaceFolder}/nod_modules/hardhat-multichain/dist/**/*.js",
+                // "${workspaceFolder}/node_modules/hardhat-multichain/**/*.ts",
+                "${workspaceFolder}/hardhat.config.ts",
+            ],
+            "sourceMaps": true,
+            "smartStep": true,
+            "console": "integratedTerminal",
+        },
+        {
+            "name": "Compile",
+            "type": "node",
+            "request": "launch",
+            "preLaunchTask": "tsc: build - tsconfig.json",
+            "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
+            "args": [ "compile", "--show-stack-traces" ],
+            "runtimeArgs": [ "--preserve-symlinks" ],
+            "outFiles": ["${workspaceFolder}/dist/**/*.js"],
+            "skipFiles": [
+                "<node_internals>/**", 
+                // "${workspaceFolder}/node_modules/**/*.js", 
+            ],
+            "resolveSourceMapLocations": [
+                "${workspaceFolder}/dist/**/*.js", 
+                "${workspaceFolder}/src/*.ts",
+                "${workspaceFolder}/test/*.ts",
+                "${workspaceFolder}/scripts/**/*.ts",
+                "${workspaceFolder}/hardhat.config.ts",
+                // "${workspaceFolder}/nod_modules/hardhat-diamond-abi/dist/**/*.js",
+                // "${workspaceFolder}/node_modules/hardhat-diamond-abi/**/*.ts",
             ],
             "sourceMaps": true,
             "smartStep": true,
