WIP buildout of hardhat-diamond-kit module begininning

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,6 +32,47 @@
             "console": "integratedTerminal",
         },
         {
+            "name": "DeploymentManager Tests",
+            "type": "node",
+            "request": "launch",
+            "preLaunchTask": "tsc: build - tsconfig.json",
+            "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
+            "args": [ 
+                "test-multichain", 
+                "${workspaceFolder}/test/deployment/Deployment.test.ts",
+                "--chains", "hardhat", "--logs", "logs",
+                // "--chains", "sepolia", "--logs", "logs",
+                // "--chains", "polygon_amoy", "--logs", "logs",
+                // "--chains", "mainnet", "--logs", "logs", 
+                // "--chains", "polygon", "--logs", "logs",
+                // "--chains", "bsc", "--logs", "logs",
+                // "--chains", "base", "--logs", "logs",
+                // "--chains", "bsc_testnet", "--logs", "logs",
+                // "--chains", "base_sepolia", "--logs", "logs",
+                // "--chains", "hardhat,sepolia", "--logs", "logs",
+                // "--chains", "sepolia,polygon_amoy", "--logs", "logs",
+                // "--chains", "hardhat,sepolia,polygon_amoy", "--logs", "logs", 
+            ],
+            "runtimeArgs": [ "--preserve-symlinks" ],
+            "outFiles": ["${workspaceFolder}/dist/**/*.js"],
+            "skipFiles": [
+                "<node_internals>/**", 
+                // "${workspaceFolder}/node_modules/**/*.js", 
+            ],
+            "resolveSourceMapLocations": [
+                "${workspaceFolder}/dist/**/*.js", 
+                "${workspaceFolder}/src/**/*.ts",
+                "${workspaceFolder}/scripts/**/*.ts",
+                "${workspaceFolder}/test/**/*.ts",
+                // "${workspaceFolder}/nod_modules/hardhat-multichain/dist/**/*.js",
+                // "${workspaceFolder}/node_modules/hardhat-multichain/**/*.ts",
+                "${workspaceFolder}/hardhat.config.ts",
+            ],
+            "sourceMaps": true,
+            "smartStep": true,
+            "console": "integratedTerminal",
+        },
+        {
             "name": "Deployment Tests",
             "type": "node",
             "request": "launch",
