--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,185 +1,270 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Unit Tests",
-            "type": "node",
-            "request": "launch",
-            "preLaunchTask": "tsc: build - tsconfig.json",
-            "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
-            "args": [
-                "test",
-                "${workspaceFolder}/test/unit/ERC20ProxyFacet.test.ts"
-            ],
-            "runtimeArgs": [ "--preserve-symlinks" ],
-            "outFiles": ["${workspaceFolder}/dist/**/*.js"],
-            "skipFiles": ["<node_internals>/**", "${workspaceFolder}/node_modules/**/*.js"],
-            "resolveSourceMapLocations": [
-                "${workspaceFolder}/dist/**/*.js", 
-                "${workspaceFolder}/src/**/*.ts",
-                "${workspaceFolder}/scripts/**/*.ts",
-                "${workspaceFolder}/test/**/*.ts",
-                // "${workspaceFolder}/nod_modules/hardhat-multichain/dist/**/*.js",
-                // "${workspaceFolder}/node_modules/hardhat-multichain/**/*.ts",
-                "${workspaceFolder}/hardhat.config.ts",
-            ],
-            "sourceMaps": true,
-            "smartStep": true,
-            // "trace": true,
-            "console": "integratedTerminal",
-        },
-        {
-            "name": "DeploymentManager Tests",
-            "type": "node",
-            "request": "launch",
-            "preLaunchTask": "tsc: build - tsconfig.json",
-            "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
-            "args": [ 
-                "test-multichain", 
-                "${workspaceFolder}/test/deployment/Deployment.test.ts",
-                "--chains", "hardhat", "--logs", "logs",
-                // "--chains", "sepolia", "--logs", "logs",
-                // "--chains", "polygon_amoy", "--logs", "logs",
-                // "--chains", "mainnet", "--logs", "logs", 
-                // "--chains", "polygon", "--logs", "logs",
-                // "--chains", "bsc", "--logs", "logs",
-                // "--chains", "base", "--logs", "logs",
-                // "--chains", "bsc_testnet", "--logs", "logs",
-                // "--chains", "base_sepolia", "--logs", "logs",
-                // "--chains", "hardhat,sepolia", "--logs", "logs",
-                // "--chains", "sepolia,polygon_amoy", "--logs", "logs",
-                // "--chains", "hardhat,sepolia,polygon_amoy", "--logs", "logs", 
-            ],
-            "runtimeArgs": [ "--preserve-symlinks" ],
-            "outFiles": ["${workspaceFolder}/dist/**/*.js"],
-            "skipFiles": [
-                "<node_internals>/**", 
-                // "${workspaceFolder}/node_modules/**/*.js", 
-            ],
-            "resolveSourceMapLocations": [
-                "${workspaceFolder}/dist/**/*.js", 
-                "${workspaceFolder}/src/**/*.ts",
-                "${workspaceFolder}/scripts/**/*.ts",
-                "${workspaceFolder}/test/**/*.ts",
-                // "${workspaceFolder}/nod_modules/hardhat-multichain/dist/**/*.js",
-                // "${workspaceFolder}/node_modules/hardhat-multichain/**/*.ts",
-                "${workspaceFolder}/hardhat.config.ts",
-            ],
-            "sourceMaps": true,
-            "smartStep": true,
-            "console": "integratedTerminal",
-        },
-        {
-            "name": "Deployment Tests",
-            "type": "node",
-            "request": "launch",
-            "preLaunchTask": "tsc: build - tsconfig.json",
-            "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
-            "args": [ 
-                "test-multichain", 
-                "${workspaceFolder}/test/deployment/MultiChainForkDeploy.test.ts",
-                "--chains", "hardhat", "--logs", "logs",
-                // "--chains", "sepolia", "--logs", "logs",
-                // "--chains", "polygon_amoy", "--logs", "logs",
-                // "--chains", "mainnet", "--logs", "logs", 
-                // "--chains", "polygon", "--logs", "logs",
-                // "--chains", "bsc", "--logs", "logs",
-                // "--chains", "base", "--logs", "logs",
-                // "--chains", "bsc_testnet", "--logs", "logs",
-                // "--chains", "base_sepolia", "--logs", "logs",
-                // "--chains", "hardhat,sepolia", "--logs", "logs",
-                // "--chains", "sepolia,polygon_amoy", "--logs", "logs",
-                // "--chains", "hardhat,sepolia,polygon_amoy", "--logs", "logs", 
-            ],
-            "runtimeArgs": [ "--preserve-symlinks" ],
-            "outFiles": ["${workspaceFolder}/dist/**/*.js"],
-            "skipFiles": [
-                "<node_internals>/**", 
-                // "${workspaceFolder}/node_modules/**/*.js", 
-            ],
-            "resolveSourceMapLocations": [
-                "${workspaceFolder}/dist/**/*.js", 
-                "${workspaceFolder}/src/**/*.ts",
-                "${workspaceFolder}/scripts/**/*.ts",
-                "${workspaceFolder}/test/**/*.ts",
-                // "${workspaceFolder}/nod_modules/hardhat-multichain/dist/**/*.js",
-                // "${workspaceFolder}/node_modules/hardhat-multichain/**/*.ts",
-                "${workspaceFolder}/hardhat.config.ts",
-            ],
-            "sourceMaps": true,
-            "smartStep": true,
-            "console": "integratedTerminal",
-        },
-        {
-            "name": "Integration Tests",
-            "type": "node",
-            "request": "launch",
-            "preLaunchTask": "tsc: build - tsconfig.json",
-            "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
-            "args": [ 
-                "test-multichain", 
-                "${workspaceFolder}/test/integration/GNUSAiIntegration.test.ts",
-                // "${workspaceFolder}/test/integration/gnus-ai/test/deployment/MultiChainForkDeploy.test.ts",
-                "--chains", "hardhat", "--logs", "logs",
-                // "--chains", "sepolia", "--logs", "logs",
-                // "--chains", "polygon_amoy", "--logs", "logs",
-                // "--chains", "mainnet", "--logs", "logs", 
-                // "--chains", "polygon", "--logs", "logs",
-                // "--chains", "bsc", "--logs", "logs",
-                // "--chains", "base", "--logs", "logs",
-                // "--chains", "bsc_testnet", "--logs", "logs",
-                // "--chains", "base_sepolia", "--logs", "logs",
-                // "--chains", "hardhat,sepolia", "--logs", "logs",
-                // "--chains", "sepolia,polygon_amoy", "--logs", "logs",
-                // "--chains", "hardhat,sepolia,polygon_amoy", "--logs", "logs", 
-            ],
-            "runtimeArgs": [ "--preserve-symlinks" ],
-            "outFiles": ["${workspaceFolder}/dist/**/*.js"],
-            "skipFiles": [
-                "<node_internals>/**", 
-                // "${workspaceFolder}/node_modules/**/*.js", 
-            ],
-            "resolveSourceMapLocations": [
-                "${workspaceFolder}/dist/**/*.js", 
-                "${workspaceFolder}/src/**/*.ts",
-                "${workspaceFolder}/scripts/**/*.ts",
-                "${workspaceFolder}/test/**/*.ts",
-                // "${workspaceFolder}/nod_modules/hardhat-multichain/dist/**/*.js",
-                // "${workspaceFolder}/node_modules/hardhat-multichain/**/*.ts",
-                "${workspaceFolder}/hardhat.config.ts",
-            ],
-            "sourceMaps": true,
-            "smartStep": true,
-            "console": "integratedTerminal",
-        },
-        {
-            "name": "Compile",
-            "type": "node",
-            "request": "launch",
-            "preLaunchTask": "tsc: build - tsconfig.json",
-            "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
-            "args": [ "compile", "--show-stack-traces" ],
-            "runtimeArgs": [ "--preserve-symlinks" ],
-            "outFiles": ["${workspaceFolder}/dist/**/*.js"],
-            "skipFiles": [
-                "<node_internals>/**", 
-                // "${workspaceFolder}/node_modules/**/*.js", 
-            ],
-            "resolveSourceMapLocations": [
-                "${workspaceFolder}/dist/**/*.js", 
-                "${workspaceFolder}/src/*.ts",
-                "${workspaceFolder}/test/*.ts",
-                "${workspaceFolder}/scripts/**/*.ts",
-                "${workspaceFolder}/hardhat.config.ts",
-                // "${workspaceFolder}/nod_modules/hardhat-diamond-abi/dist/**/*.js",
-                // "${workspaceFolder}/node_modules/hardhat-diamond-abi/**/*.ts",
-            ],
-            "sourceMaps": true,
-            "smartStep": true,
-            "console": "integratedTerminal",
-        },
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Unit Tests",
+      "type": "node",
+      "request": "launch",
+      "preLaunchTask": "tsc: build - tsconfig.json",
+      "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
+      "args": [
+        "test",
+        "${workspaceFolder}/test/unit/ERC20ProxyFacet.test.ts"
+      ],
+      "runtimeArgs": [
+        "--preserve-symlinks"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/dist/**/*.js"
+      ],
+      "skipFiles": [
+        "<node_internals>/**",
+        "${workspaceFolder}/node_modules/**/*.js"
+      ],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/dist/**/*.js",
+        "${workspaceFolder}/src/**/*.ts",
+        "${workspaceFolder}/scripts/**/*.ts",
+        "${workspaceFolder}/test/**/*.ts",
+        // "${workspaceFolder}/node_modules/hardhat-multichain/dist/**/*.js",
+        // "${workspaceFolder}/node_modules/hardhat-multichain/**/*.ts",
+        "${workspaceFolder}/hardhat.config.ts",
+      ],
+      "sourceMaps": true,
+      "smartStep": true,
+      // "trace": true,
+      "console": "integratedTerminal",
+    },
+    {
+      "name": "Diamonds",
+      "type": "node",
+      "request": "launch",
+      // "preLaunchTask": "tsc: build - tsconfig.json",
+      "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
+      "args": [
+        "test-multichain",
+        "${workspaceFolder}/test/deployment/DiamondDeployment.test.ts",
+        // "--chains", "hardhat",
+        "--chains", "sepolia",
+        // "--chains", "polygon_amoy",
+        // "--chains", "mainnet",  
+        // "--chains", "polygon",
+        // "--chains", "bsc", 
+        // "--chains", "base",
+        // "--chains", "bsc_testnet",
+        // "--chains", "base_sepolia",
+        // "--chains", "hardhat,sepolia",
+        // "--chains", "sepolia,polygon_amoy",
+        // "--chains", "hardhat,sepolia,polygon_amoy", 
+        "--logs",
+        "logs",
+        ],
+      "runtimeExecutable": "/home/jamatulli/.nvm/versions/node/v18.20.5/bin/node",
+      "runtimeArgs": [
+        "--preserve-symlinks"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/dist/**/*.js",
+        "${workspaceFolder}/packages/diamonds/dist/**/*.js",
+        "${workspaceFolder}/packages/hardhat-diamonds/dist/**/*.js",
+      ],
+      "skipFiles": [
+        "<node_internals>/**",
+        // "${workspaceFolder}/node_modules/**/*.js", 
+      ],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/dist/**/*.js",
+        "${workspaceFolder}/src/**/*.ts",
+        "${workspaceFolder}/scripts/**/*.ts",
+        "${workspaceFolder}/test/**/*.ts",
+        "${workspaceFolder}/packages/diamonds/dist/**/*.ts",
+        "${workspaceFolder}/node_modules/@gnus.ai/diamonds/dist/**/*.ts",
+        // "${workspaceFolder}/node_modules/@gnus.ai/diamonds/dist/**/*.js",
+        "${workspaceFolder}/hardhat.config.ts",
+      ],
+      "sourceMaps": true,
+      "smartStep": true,
+      "console": "integratedTerminal",
+    },
+    {
+      "name": "DeploymentManager Tests",
+      "type": "node",
+      "request": "launch",
+      "preLaunchTask": "tsc: build - tsconfig.json",
+      "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
+      "args": [
+        "test-multichain",
+        "${workspaceFolder}/test/deployment/Deployment.test.ts",
+        // "--chains", "hardhat",
+        "--chains", "sepolia",
+        // "--chains", "polygon_amoy",
+        // "--chains", "mainnet",  
+        // "--chains", "polygon",
+        // "--chains", "bsc", 
+        // "--chains", "base",
+        // "--chains", "bsc_testnet",
+        // "--chains", "base_sepolia",
+        // "--chains", "hardhat,sepolia",
+        // "--chains", "sepolia,polygon_amoy",
+        // "--chains", "hardhat,sepolia,polygon_amoy", 
+        "--logs",
+        "logs",
+      ],
+      "runtimeArgs": [
+        "--preserve-symlinks"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/dist/**/*.js"
+      ],
+      "skipFiles": [
+        "<node_internals>/**",
+        // "${workspaceFolder}/node_modules/**/*.js", 
+      ],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/dist/**/*.js",
+        "${workspaceFolder}/src/**/*.ts",
+        "${workspaceFolder}/scripts/**/*.ts",
+        "${workspaceFolder}/test/**/*.ts",
+        // "${workspaceFolder}/node_modules/hardhat-multichain/dist/**/*.js",
+        // "${workspaceFolder}/node_modules/hardhat-multichain/**/*.ts",
+        "${workspaceFolder}/hardhat.config.ts",
+      ],
+      "sourceMaps": true,
+      "smartStep": true,
+      "console": "integratedTerminal",
+    },
+    {
+      "name": "Deployment Tests",
+      "type": "node",
+      "request": "launch",
+      "preLaunchTask": "tsc: build - tsconfig.json",
+      "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
+      "args": [
+        "test-multichain",
+        "${workspaceFolder}/test/deployment/MultiChainForkDeploy.test.ts",
+        "--chains",
+        "hardhat",
+        "--logs",
+        "logs",
+        // "--chains", "sepolia", "--logs", "logs",
+        // "--chains", "polygon_amoy", "--logs", "logs",
+        // "--chains", "mainnet", "--logs", "logs", 
+        // "--chains", "polygon", "--logs", "logs",
+        // "--chains", "bsc", "--logs", "logs",
+        // "--chains", "base", "--logs", "logs",
+        // "--chains", "bsc_testnet", "--logs", "logs",
+        // "--chains", "base_sepolia", "--logs", "logs",
+        // "--chains", "hardhat,sepolia", "--logs", "logs",
+        // "--chains", "sepolia,polygon_amoy", "--logs", "logs",
+        // "--chains", "hardhat,sepolia,polygon_amoy", "--logs", "logs", 
+      ],
+      "runtimeArgs": [
+        "--preserve-symlinks"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/dist/**/*.js"
+      ],
+      "skipFiles": [
+        "<node_internals>/**",
+        // "${workspaceFolder}/node_modules/**/*.js", 
+      ],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/dist/**/*.js",
+        "${workspaceFolder}/src/**/*.ts",
+        "${workspaceFolder}/scripts/**/*.ts",
+        "${workspaceFolder}/test/**/*.ts",
+        // "${workspaceFolder}/nod_modules/hardhat-multichain/dist/**/*.js",
+        // "${workspaceFolder}/node_modules/hardhat-multichain/**/*.ts",
+        "${workspaceFolder}/hardhat.config.ts",
+      ],
+      "sourceMaps": true,
+      "smartStep": true,
+      "console": "integratedTerminal",
+    },
+    {
+      "name": "Integration Tests",
+      "type": "node",
+      "request": "launch",
+      "preLaunchTask": "tsc: build - tsconfig.json",
+      "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
+      "args": [
+        "test-multichain",
+        "${workspaceFolder}/test/integration/GNUSAiIntegration.test.ts",
+        // "${workspaceFolder}/test/integration/gnus-ai/test/deployment/MultiChainForkDeploy.test.ts",
+        "--chains",
+        "hardhat",
+        "--logs",
+        "logs",
+        // "--chains", "sepolia", "--logs", "logs",
+        // "--chains", "polygon_amoy", "--logs", "logs",
+        // "--chains", "mainnet", "--logs", "logs", 
+        // "--chains", "polygon", "--logs", "logs",
+        // "--chains", "bsc", "--logs", "logs",
+        // "--chains", "base", "--logs", "logs",
+        // "--chains", "bsc_testnet", "--logs", "logs",
+        // "--chains", "base_sepolia", "--logs", "logs",
+        // "--chains", "hardhat,sepolia", "--logs", "logs",
+        // "--chains", "sepolia,polygon_amoy", "--logs", "logs",
+        // "--chains", "hardhat,sepolia,polygon_amoy", "--logs", "logs", 
+      ],
+      "runtimeArgs": [
+        "--preserve-symlinks"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/dist/**/*.js"
+      ],
+      "skipFiles": [
+        "<node_internals>/**",
+        // "${workspaceFolder}/node_modules/**/*.js", 
+      ],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/dist/**/*.js",
+        "${workspaceFolder}/src/**/*.ts",
+        "${workspaceFolder}/scripts/**/*.ts",
+        "${workspaceFolder}/test/**/*.ts",
+        // "${workspaceFolder}/nod_modules/hardhat-multichain/dist/**/*.js",
+        // "${workspaceFolder}/node_modules/hardhat-multichain/**/*.ts",
+        "${workspaceFolder}/hardhat.config.ts",
+      ],
+      "sourceMaps": true,
+      "smartStep": true,
+      "console": "integratedTerminal",
+    },
+    {
+      "name": "Compile",
+      "type": "node",
+      "request": "launch",
+      "preLaunchTask": "tsc: build - tsconfig.json",
+      "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
+      "args": [
+        "compile",
+        "--show-stack-traces"
+      ],
+      "runtimeArgs": [
+        "--preserve-symlinks"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/dist/**/*.js"
+      ],
+      "skipFiles": [
+        "<node_internals>/**",
+        // "${workspaceFolder}/node_modules/**/*.js", 
+      ],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/dist/**/*.js",
+        "${workspaceFolder}/src/*.ts",
+        "${workspaceFolder}/test/*.ts",
+        "${workspaceFolder}/scripts/**/*.ts",
+        "${workspaceFolder}/hardhat.config.ts",
+        // "${workspaceFolder}/nod_modules/hardhat-diamond-abi/dist/**/*.js",
+        // "${workspaceFolder}/node_modules/hardhat-diamond-abi/**/*.ts",
+      ],
+      "sourceMaps": true,
+      "smartStep": true,
+      "console": "integratedTerminal",
+    },
+  ]
 }
