working tests with ProxyDiamond Deployment

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,7 +39,58 @@
       "console": "integratedTerminal",
     },
     {
-      "name": "Diamonds",
+      "name": "Diamonds-Multichain",
+      "type": "node",
+      "request": "launch",
+      // "preLaunchTask": "tsc: build - tsconfig.json",
+      "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
+      "args": [
+        "test-multichain",
+        "${workspaceFolder}/test/deployment/DiamondMultichainDeployment.test.ts",
+        // "--chains", "hardhat",
+        "--chains", "sepolia",
+        // "--chains", "polygon_amoy",
+        // "--chains", "mainnet",  
+        // "--chains", "polygon",
+        // "--chains", "bsc", 
+        // "--chains", "base",
+        // "--chains", "bsc_testnet",
+        // "--chains", "base_sepolia",
+        // "--chains", "hardhat,sepolia",
+        // "--chains", "sepolia,polygon_amoy",
+        // "--chains", "hardhat,sepolia,polygon_amoy", 
+        "--logs",
+        "logs",
+        ],
+      "runtimeExecutable": "/home/jamatulli/.nvm/versions/node/v18.20.5/bin/node",
+      "runtimeArgs": [
+        "--preserve-symlinks"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/dist/**/*.js",
+        "${workspaceFolder}/packages/diamonds/dist/**/*.js",
+        "${workspaceFolder}/packages/hardhat-diamonds/dist/**/*.js",
+      ],
+      "skipFiles": [
+        "<node_internals>/**",
+        // "${workspaceFolder}/node_modules/**/*.js", 
+      ],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/dist/**/*.js",
+        "${workspaceFolder}/src/**/*.ts",
+        "${workspaceFolder}/scripts/**/*.ts",
+        "${workspaceFolder}/test/**/*.ts",
+        "${workspaceFolder}/packages/diamonds/dist/**/*.ts",
+        "${workspaceFolder}/node_modules/@gnus.ai/diamonds/dist/**/*.ts",
+        // "${workspaceFolder}/node_modules/@gnus.ai/diamonds/dist/**/*.js",
+        "${workspaceFolder}/hardhat.config.ts",
+      ],
+      "sourceMaps": true,
+      "smartStep": true,
+      "console": "integratedTerminal",
+    },
+    {
+      "name": "Diamonds-basic",
       "type": "node",
       "request": "launch",
       // "preLaunchTask": "tsc: build - tsconfig.json",
