working version of Diamonds with basic deployment tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -46,19 +46,21 @@
       "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
       "args": [
         "test-multichain",
-        "${workspaceFolder}/test/deployment/DiamondMultichainDeployment.test.ts",
-        // "--chains", "hardhat",
-        "--chains", "sepolia",
-        // "--chains", "polygon_amoy",
-        // "--chains", "mainnet",  
-        // "--chains", "polygon",
-        // "--chains", "bsc", 
-        // "--chains", "base",
-        // "--chains", "bsc_testnet",
-        // "--chains", "base_sepolia",
-        // "--chains", "hardhat,sepolia",
-        // "--chains", "sepolia,polygon_amoy",
-        // "--chains", "hardhat,sepolia,polygon_amoy", 
+        "${workspaceFolder}/test/deployment/ProxyDiamondMultichainDeployment.test.ts",
+        "${workspaceFolder}/test/deployment/GeniusDiamondMultichainDeployment.test.ts",
+        "--chains", 
+        "hardhat",
+        //  "sepolia",
+        //  "polygon_amoy",
+        //  "mainnet",  
+        //  "polygon",
+        //  "bsc", 
+        //  "base",
+        //  "bsc_testnet",
+        //  "base_sepolia",
+        //  "hardhat,sepolia",
+        //  "sepolia,polygon_amoy",
+        //  "hardhat,sepolia,polygon_amoy", 
         "--logs",
         "logs",
         ],
@@ -97,19 +99,21 @@
       "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
       "args": [
         "test-multichain",
-        "${workspaceFolder}/test/deployment/DiamondDeployment.test.ts",
-        // "--chains", "hardhat",
-        "--chains", "sepolia",
-        // "--chains", "polygon_amoy",
-        // "--chains", "mainnet",  
-        // "--chains", "polygon",
-        // "--chains", "bsc", 
-        // "--chains", "base",
-        // "--chains", "bsc_testnet",
-        // "--chains", "base_sepolia",
-        // "--chains", "hardhat,sepolia",
-        // "--chains", "sepolia,polygon_amoy",
-        // "--chains", "hardhat,sepolia,polygon_amoy", 
+        "${workspaceFolder}/test/deployment/ProxyDiamondDeployment.test.ts",
+        "${workspaceFolder}/test/deployment/GeniusDiamondDeployment.test.ts",
+        "--chains", 
+        // "hardhat",
+        "sepolia",
+        //  "polygon_amoy",
+        //  "mainnet",  
+        //  "polygon",
+        //  "bsc", 
+        //  "base",
+        //  "bsc_testnet",
+        //  "base_sepolia",
+        //  "hardhat,sepolia",
+        //  "sepolia,polygon_amoy",
+        //  "hardhat,sepolia,polygon_amoy", 
         "--logs",
         "logs",
         ],
@@ -150,17 +154,17 @@
         "test-multichain",
         "${workspaceFolder}/test/deployment/Deployment.test.ts",
         // "--chains", "hardhat",
-        "--chains", "sepolia",
-        // "--chains", "polygon_amoy",
-        // "--chains", "mainnet",  
-        // "--chains", "polygon",
-        // "--chains", "bsc", 
-        // "--chains", "base",
-        // "--chains", "bsc_testnet",
-        // "--chains", "base_sepolia",
-        // "--chains", "hardhat,sepolia",
-        // "--chains", "sepolia,polygon_amoy",
-        // "--chains", "hardhat,sepolia,polygon_amoy", 
+         "sepolia",
+        //  "polygon_amoy",
+        //  "mainnet",  
+        //  "polygon",
+        //  "bsc", 
+        //  "base",
+        //  "bsc_testnet",
+        //  "base_sepolia",
+        //  "hardhat,sepolia",
+        //  "sepolia,polygon_amoy",
+        //  "hardhat,sepolia,polygon_amoy", 
         "--logs",
         "logs",
       ],
@@ -198,19 +202,18 @@
         "${workspaceFolder}/test/deployment/MultiChainForkDeploy.test.ts",
         "--chains",
         "hardhat",
-        "--logs",
-        "logs",
-        // "--chains", "sepolia", "--logs", "logs",
-        // "--chains", "polygon_amoy", "--logs", "logs",
-        // "--chains", "mainnet", "--logs", "logs", 
-        // "--chains", "polygon", "--logs", "logs",
-        // "--chains", "bsc", "--logs", "logs",
-        // "--chains", "base", "--logs", "logs",
-        // "--chains", "bsc_testnet", "--logs", "logs",
-        // "--chains", "base_sepolia", "--logs", "logs",
-        // "--chains", "hardhat,sepolia", "--logs", "logs",
-        // "--chains", "sepolia,polygon_amoy", "--logs", "logs",
-        // "--chains", "hardhat,sepolia,polygon_amoy", "--logs", "logs", 
+        //  "sepolia",
+        //  "polygon_amoy",
+        //  "mainnet", 
+        //  "polygon",
+        //  "bsc",
+        //  "base",
+        //  "bsc_testnet",
+        //  "base_sepolia",
+        //  "hardhat,sepolia",
+        //  "sepolia,polygon_amoy",
+        //  "hardhat,sepolia,polygon_amoy", 
+        "--logs", "logs", 
       ],
       "runtimeArgs": [
         "--preserve-symlinks"
@@ -247,19 +250,18 @@
         // "${workspaceFolder}/test/integration/gnus-ai/test/deployment/MultiChainForkDeploy.test.ts",
         "--chains",
         "hardhat",
-        "--logs",
-        "logs",
-        // "--chains", "sepolia", "--logs", "logs",
-        // "--chains", "polygon_amoy", "--logs", "logs",
-        // "--chains", "mainnet", "--logs", "logs", 
-        // "--chains", "polygon", "--logs", "logs",
-        // "--chains", "bsc", "--logs", "logs",
-        // "--chains", "base", "--logs", "logs",
-        // "--chains", "bsc_testnet", "--logs", "logs",
-        // "--chains", "base_sepolia", "--logs", "logs",
-        // "--chains", "hardhat,sepolia", "--logs", "logs",
-        // "--chains", "sepolia,polygon_amoy", "--logs", "logs",
-        // "--chains", "hardhat,sepolia,polygon_amoy", "--logs", "logs", 
+        //  "sepolia",
+        //  "polygon_amoy",
+        //  "mainnet", 
+        //  "polygon",
+        //  "bsc",
+        //  "base",
+        //  "bsc_testnet",
+        //  "base_sepolia",
+        //  "hardhat,sepolia",
+        //  "sepolia,polygon_amoy",
+        //  "hardhat,sepolia,polygon_amoy",
+         "--logs", "logs", 
       ],
       "runtimeArgs": [
         "--preserve-symlinks"
