--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,40 +5,6 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Unit Tests",
-      "type": "node",
-      "request": "launch",
-      "preLaunchTask": "tsc: build - tsconfig.json",
-      "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
-      "args": [
-        "test",
-        "${workspaceFolder}/test/unit/ERC20ProxyFacet.test.ts"
-      ],
-      "runtimeArgs": [
-        "--preserve-symlinks"
-      ],
-      "outFiles": [
-        "${workspaceFolder}/dist/**/*.js"
-      ],
-      "skipFiles": [
-        "<node_internals>/**",
-        "${workspaceFolder}/node_modules/**/*.js"
-      ],
-      "resolveSourceMapLocations": [
-        "${workspaceFolder}/dist/**/*.js",
-        "${workspaceFolder}/src/**/*.ts",
-        "${workspaceFolder}/scripts/**/*.ts",
-        "${workspaceFolder}/test/**/*.ts",
-        // "${workspaceFolder}/node_modules/hardhat-multichain/dist/**/*.js",
-        // "${workspaceFolder}/node_modules/hardhat-multichain/**/*.ts",
-        "${workspaceFolder}/hardhat.config.ts",
-      ],
-      "sourceMaps": true,
-      "smartStep": true,
-      // "trace": true,
-      "console": "integratedTerminal",
-    },
-    {
       "name": "Diamonds-Multichain",
       "type": "node",
       "request": "launch",
@@ -46,11 +12,11 @@
       "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
       "args": [
         "test-multichain",
-        "${workspaceFolder}/test/deployment/ProxyDiamondMultichainDeployment.test.ts",
+        // "${workspaceFolder}/test/deployment/ProxyDiamondMultichainDeployment.test.ts",
         "${workspaceFolder}/test/deployment/GeniusDiamondMultichainDeployment.test.ts",
         "--chains", 
-        "hardhat",
-        //  "sepolia",
+        // "hardhat",
+         "sepolia",
         //  "polygon_amoy",
         //  "mainnet",  
         //  "polygon",
@@ -63,6 +29,7 @@
         //  "hardhat,sepolia,polygon_amoy", 
         "--logs",
         "logs",
+        // "--verbose",
         ],
       "runtimeExecutable": "/home/jamatulli/.nvm/versions/node/v18.20.5/bin/node",
       "runtimeArgs": [
@@ -142,6 +109,40 @@
       ],
       "sourceMaps": true,
       "smartStep": true,
+      "console": "integratedTerminal",
+    },
+    {
+      "name": "Unit Tests",
+      "type": "node",
+      "request": "launch",
+      "preLaunchTask": "tsc: build - tsconfig.json",
+      "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
+      "args": [
+        "test",
+        "${workspaceFolder}/test/unit/ERC20ProxyFacet.test.ts"
+      ],
+      "runtimeArgs": [
+        "--preserve-symlinks"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/dist/**/*.js"
+      ],
+      "skipFiles": [
+        "<node_internals>/**",
+        "${workspaceFolder}/node_modules/**/*.js"
+      ],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/dist/**/*.js",
+        "${workspaceFolder}/src/**/*.ts",
+        "${workspaceFolder}/scripts/**/*.ts",
+        "${workspaceFolder}/test/**/*.ts",
+        // "${workspaceFolder}/node_modules/hardhat-multichain/dist/**/*.js",
+        // "${workspaceFolder}/node_modules/hardhat-multichain/**/*.ts",
+        "${workspaceFolder}/hardhat.config.ts",
+      ],
+      "sourceMaps": true,
+      "smartStep": true,
+      // "trace": true,
       "console": "integratedTerminal",
     },
     {
