--- a/diamonds/ProxyDiamond/proxydiamond.config.json
+++ b/diamonds/ProxyDiamond/proxydiamond.config.json
@@ -1,23 +1,26 @@
 {
-  "DiamondCutFacet": {
-    "priority": 10,
-    "versions": {
-      "0.0": {}
-    }
-  },
-  "DiamondLoupeFacet": {
-    "priority": 20,
-    "versions": {
-      "0.0": {}
-    }
-  },
-  "ERC20ProxyFacet": {
-    "priority": 30,
-    "versions": {
-      "0.0": {
-        "callbacks": [
-         "createXMPLToken"
-        ]
+  "protocolVersion": 0.0,
+  "facets": {
+    "DiamondCutFacet": {
+      "priority": 10,
+      "versions": {
+        "0.0": {}
+      }
+    },
+    "DiamondLoupeFacet": {
+      "priority": 20,
+      "versions": {
+        "0.0": {}
+      }
+    },
+    "ERC20ProxyFacet": {
+      "priority": 40,
+      "versions": {
+        "0.0": {
+          "callbacks": [
+            "createXMPLToken"
+          ]
+        }
       }
     }
   }
