renamed Dep Tests, add extensive logging

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,11 +12,13 @@
       "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
       "args": [
         "test-multichain",
-        // "${workspaceFolder}/test/deployment/ProxyDiamondMultichainDeployment.test.ts",
-        "${workspaceFolder}/test/deployment/GeniusDiamondMultichainDeployment.test.ts",
+        // "${workspaceFolder}/test/deployment/ProxyDiamondDeployment.test.ts",
+        // "${workspaceFolder}/test/deployment/GeniusDiamondDeploymentSuite.test.ts",
+        "${workspaceFolder}/test/deployment/GeniusDiamondDeployment.test.ts",
+        // "${workspaceFolder}/test/deployment/GeniusDiamondDeploymentComparison.test.ts",
         "--chains", 
-        // "hardhat",
-         "sepolia",
+        "hardhat",
+        //  "sepolia",
         //  "polygon_amoy",
         //  "mainnet",  
         //  "polygon",
@@ -27,6 +29,8 @@
         //  "hardhat,sepolia",
         //  "sepolia,polygon_amoy",
         //  "hardhat,sepolia,polygon_amoy", 
+        //  "mainnet,sepolia,polygon_amoy,polygon",
+        //  "mainnet,sepolia,polygon_amoy,polygon,bsc,bsc_testnet,base,base_sepolia",        
         "--logs",
         "logs",
         // "--verbose",
@@ -66,7 +70,7 @@
       "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
       "args": [
         "test-multichain",
-        "${workspaceFolder}/test/deployment/ProxyDiamondDeployment.test.ts",
+        // "${workspaceFolder}/test/deployment/ProxyDiamondDeployment.test.ts",
         "${workspaceFolder}/test/deployment/GeniusDiamondDeployment.test.ts",
         "--chains", 
         // "hardhat",
