sepolia upgrade tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,11 +14,12 @@
         "test-multichain",
         // "${workspaceFolder}/test/deployment/ProxyDiamondDeployment.test.ts",
         "${workspaceFolder}/test/deployment/GeniusDiamondDeploymentSuite.test.ts",
+        // "${workspaceFolder}/test/deployment/GeniusDiamondPreDeploymentComparison.test.ts",
         // "${workspaceFolder}/test/deployment/GeniusDiamondDeployment.test.ts",
-        // "${workspaceFolder}/test/deployment/GeniusDiamondDeploymentComparison.test.ts",
+        // "${workspaceFolder}/test/deployment/GeniusDiamondPostDeploymentComparison.test.ts",
         "--chains", 
-        "hardhat",
-        //  "sepolia",
+        // "hardhat",
+         "sepolia",
         //  "polygon_amoy",
         //  "mainnet",  
         //  "polygon",
@@ -31,6 +32,51 @@
         //  "hardhat,sepolia,polygon_amoy", 
         //  "mainnet,sepolia,polygon_amoy,polygon",
         //  "mainnet,sepolia,polygon_amoy,polygon,bsc,bsc_testnet,base,base_sepolia",        
+        "--logs",
+        "logs",
+        // "--verbose",
+        ],
+      "runtimeExecutable": "/home/jamatulli/.nvm/versions/node/v18.20.5/bin/node",
+      "runtimeArgs": [
+        "--preserve-symlinks"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/dist/**/*.js",
+        "${workspaceFolder}/packages/diamonds/dist/**/*.js",
+        "${workspaceFolder}/packages/hardhat-diamonds/dist/**/*.js",
+      ],
+      "skipFiles": [
+        "<node_internals>/**",
+        // "${workspaceFolder}/node_modules/**/*.js", 
+      ],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/dist/**/*.js",
+        "${workspaceFolder}/src/**/*.ts",
+        "${workspaceFolder}/scripts/**/*.ts",
+        "${workspaceFolder}/test/**/*.ts",
+        "${workspaceFolder}/packages/diamonds/dist/**/*.ts",
+        "${workspaceFolder}/node_modules/@gnus.ai/diamonds/dist/**/*.ts",
+        // "${workspaceFolder}/node_modules/@gnus.ai/diamonds/dist/**/*.js",
+        "${workspaceFolder}/hardhat.config.ts",
+      ],
+      "sourceMaps": true,
+      "smartStep": true,
+      "console": "integratedTerminal",
+    },
+    {
+      "name": "Sepolia Upgrade",
+      "type": "node",
+      "request": "launch",
+      // "preLaunchTask": "tsc: build - tsconfig.json",
+      "program": "${workspaceFolder}/node_modules/hardhat/internal/cli/cli.js",
+      "args": [
+        "test-multichain",
+        // "${workspaceFolder}/test/deployment/GeniusDiamondDeploymentSuite.test.ts",
+        // "${workspaceFolder}/test/deployment/GeniusDiamondPreDeploymentComparison.test.ts",
+        "${workspaceFolder}/test/deployment/sepolia/GeniusDiamondDeployment.test.ts",
+        // "${workspaceFolder}/test/deployment/GeniusDiamondPostDeploymentComparison.test.ts",
+        "--chains", 
+        "sepolia",
         "--logs",
         "logs",
         // "--verbose",
