added OZDefenderStrategy with Facet Selector proposal

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,16 +13,16 @@
       "args": [
         "test-multichain",
         // "${workspaceFolder}/test/deployment/ProxyDiamondDeployment.test.ts",
-        // "${workspaceFolder}/test/deployment/GeniusDiamondDeploymentSuite.test.ts",
-        "${workspaceFolder}/test/deployment/GeniusDiamondPreDeploymentComparison.test.ts",
+        "${workspaceFolder}/test/deployment/GeniusDiamondDeploymentSuite.test.ts",
+        // "${workspaceFolder}/test/deployment/GeniusDiamondPreDeploymentComparison.test.ts",
         // "${workspaceFolder}/test/deployment/GeniusDiamondDeployment.test.ts",
         // "${workspaceFolder}/test/deployment/GeniusDiamondPostDeploymentComparison.test.ts",
         "--chains", 
-        // "hardhat",
+        "hardhat",
         //  "sepolia",
         //  "polygon_amoy",
         //  "mainnet",  
-         "polygon",
+        //  "polygon",
         //  "bsc", 
         //  "base",
         //  "bsc_testnet",
