--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,10 @@
     "target": "es2018",
     "module": "commonjs",
     "strict": true,
-    "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
+    "sourceMap": true,
+    "inlineSources": true,
     "allowJs": true,
     "checkJs": false,
     "rootDirs": [
@@ -20,16 +21,29 @@
     "resolveJsonModule": true,
     "baseUrl": "./",
     "paths": {
-      "@gnus.ai/diamonds/*": ["./packages/diamonds/src"],
-      "@gnus.ai/hardhat-diamonds/*": ["./packages/hardhat-diamonds/src"]
-    }
+      "@gnus.ai/diamonds": ["./packages/diamonds/src/index.ts"],
+      "@gnus.ai/hardhat-diamonds": ["./packages/hardhat-diamonds/src/index.ts"],
+      "scripts/*": ["./scripts/*"],
+      "test/*": ["./test/*"],
+      "typechain-types/*": ["./typechain-types/*"],
+    },
+    "types": [
+      "node",
+      "hardhat",
+      "@nomiclabs/hardhat-ethers",
+      "@nomiclabs/hardhat-waffle",
+      "@nomiclabs/hardhat-web3",
+      "@typechain/ethers-v5",
+      "@typechain/hardhat"
+    ],
   },
   "include": [
     "./scripts", 
     "./test", 
     "./typechain-types",
-    "./packages/diamonds/**/*.ts"  ],
-  "exclude": ["node_modules", "dist", "notes"],
+    "./packages/diamonds/**/*.ts",
+    "./packages/hardhat-diamonds/**/*.ts",],
+  "exclude": ["node_modules", "dist", "notes", "packages/**/notes"],
   "files": ["./hardhat.config.ts"],
   "workspaces": ["packages/*"]
 }
